fix(style): mobile rendering -fixed body padding - added subemenu_name text-align - fixed submenu_card padding -fixed title padding for the first submenu

--- a/sass_files/_base.scss
+++ b/sass_files/_base.scss
@@ -42,7 +42,7 @@
 }
 
 body{
-    padding-bottom:8vh;
+    padding-bottom:7vh;
 }
 
 a{
