--- a/sass_files/_layouts.scss
+++ b/sass_files/_layouts.scss
@@ -76,7 +76,7 @@
         padding-top:1em;
         padding-bottom:1em;
         font-size: 4em;
-        vertical-align: center;
+        text-align:center;
     }
 
     &_content {
